k8s/09-traefik-certresolver.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: fullstack
spec:
  redirectScheme:
    scheme: https
    permanent: true
