k8s/05-backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: fullstack
spec:
  # Commented out for single replica for demonstration
  # replicas: 2
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: himanm/devops-project-3-backend:9
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: backend-storage
              mountPath: /app/data
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: backend-storage
          persistentVolumeClaim:
            claimName: backend-pvc
