k8s/08-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: fullstack
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3005
      targetPort: 3000
  type: ClusterIP
