k8s/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
    # ArgoCD server runs on HTTPS by default, so we need to tell Traefik to talk HTTPS to the backend
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  rules:
    - host: argocd.himanmanduja.fun
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: https
